@@ -1,3 +1,3 @@
-<!ENTITY title "FireGPG - Private key password">
+<!ENTITY title "FireGPG - Password">
 <!ENTITY description "Enter your private key password :">
 <!ENTITY save-password-checkbox "Save password for this session">
